# sequential_fifo_queue

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug.txt
cmake/: Sanitize.cmake
cmake/presets/: base.json  linux.json
src/: CMakeLists.txt  buffer.h  buffer.t.cpp  freelist.h  main.cpp  managed.h  ring_buffer.h  ring_buffer.t.cpp  types.h
src/allocators/: CMakeLists.txt  dynamic_buffer.h  dynamic_buffer.t.cpp  dynamic_buffer.txt.old  freelist.h  freelist.t.cpp  growing_pool.h  growing_pool.t.cpp  growing_pool_ptr.t.cpp  local_buffer.h  local_buffer.t.cpp  segment_manager.h  segment_manager.t.cpp  segmented_ptr.t.cpp  test_allocator.h
src/c_api/: CMakeLists.txt  queue_c_api.cpp  queue_c_api.h  queue_c_api.t.cpp
src/core/: CMakeLists.txt  concepts.h  intrusive_slist.h  log.h  pointer_operations.h  ptr_utils.h  result.h  segmented_ptr.h  thin_ptr.h  types.h
src/datastructures/: CMakeLists.txt  offset_list.h  offset_list.t.cpp  queue.h  queue.t.cpp  queue_assignment.t.cpp  ring_buffer.h  ring_buffer.t.cpp
src/iterators/: CMakeLists.txt  README.md  container_interface.h  iterator_facade.h  iterator_test_suite.h
src/pch/: CMakeLists.txt  pch_dummy.cpp
src/pointers/: CMakeLists.txt  allocator_interface.h  cache.h  growing_pool_ptr.h  growing_pool_storage.h  offset_arithmetic.h  pointer_operations.h  pointer_test_suite.h  segmented_ptr.h  segmented_ptr.txt.old  thin_ptr.h
src/result/: CMakeLists.txt  README.md  error.h  log.h  result.h
